--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,3 +1,21 @@
+<div class="container">
+<div class="row">
+<div class="col-sm-4">
+
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- school9edu_main_Blog1_1x1_as -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="9074553645"
+           data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+
+</div>
+
+<div class="col-sm-4">
 <h2>Resend confirmation instructions</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
@@ -11,6 +29,47 @@
   <div class="actions">
     <%= f.submit "Resend confirmation instructions" %>
   </div>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Responsive Links -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="8409268847"
+           data-ad-format="link"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
+
+<div class="col-sm-4">
+	 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- school9edu_main_Blog1_1x1_as -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="9074553645"
+           data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>   
+
+</div>
+</div>
+
+<div class="row">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- school9edu_main_Blog1_1x1_as -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="9074553645"
+           data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>   
+</div>
+</div>
