--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,7 +30,9 @@
 <div class="col-sm-6 text-center">
 <div class="ibox-content">
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2><b>Edit Profile</b></h2>
+
+<!-- <%= resource_name.to_s.humanize %> -->
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -87,6 +89,19 @@
 
 
 </div>
+</div>
+
+<div class="col-sm-3 text-center">
+     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- school9edu_main_Blog1_1x1_as -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="9074553645"
+                     data-ad-format="auto"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>   
 </div>
 </div>
 </div>
