--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,10 +11,22 @@
 
     <% end %>
 <div class="row">
-<div class="col-sm-4"></div>
 <div class="col-sm-4">
-<div class="ibox-content">
-<h2 class="text-center">Sign up</h2>
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- school9edu_main_Blog1_1x1_as -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="9074553645"
+                     data-ad-format="auto"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>   
+
+</div>
+<div class="col-sm-4">
+<div class="ibox-content text-center">
+<h1 class="text-center"><b>Registraion</b></h1>
    <div class="field">
     <%= f.label :firstname %><br/>
     <%= f.text_field :firstname, autofocus: true, required: true %>
@@ -59,9 +71,32 @@
     <%= f.submit "Sign up", :class => "btn btn-primary m-b" %>
   </div>
 <% end %>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Responsive Links -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="8409268847"
+           data-ad-format="link"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
 
 <%= render "devise/shared/links" %>
 </div>
 </div>
+    <div class="col-sm-4">
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- school9edu_main_Blog1_1x1_as -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="9074553645"
+                     data-ad-format="auto"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>   
+
+    </div>
 </div>
 </div>
