--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,79 @@
+<div class="container">
+	<div class="row">
+<div class="col-sm-4">
+
+         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- school9edu_main_Blog1_1x1_as -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="9074553645"
+           data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>   
+
+</div>
+<div class="col-sm-4">
+<div class="ibox-content">
 <h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+		  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+		  <div class="field">
+		    <%= f.label :email %><br />
+		    <%= f.email_field :email, autofocus: true %>
+		  </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+		  <div class="actions">
+		    <%= f.submit "Send me reset password instructions" %>
+		  </div>
+		<% end %>
 
-<%= render "devise/shared/links" %>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Responsive Links -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="8409268847"
+           data-ad-format="link"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+
+		<%= render "devise/shared/links" %>
+</div>
+</div>
+
+		<div class="col-sm-4">
+
+		         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		      <!-- school9edu_main_Blog1_1x1_as -->
+		      <ins class="adsbygoogle"
+		           style="display:block"
+		           data-ad-client="ca-pub-7665698555914778"
+		           data-ad-slot="9074553645"
+		           data-ad-format="auto"></ins>
+		      <script>
+		      (adsbygoogle = window.adsbygoogle || []).push({});
+		      </script>   
+
+		</div>
+</div>
+		<div class="row">
+		<br>
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		      <!-- school9edu_main_Blog1_1x1_as -->
+		      <ins class="adsbygoogle"
+		           style="display:block"
+		           data-ad-client="ca-pub-7665698555914778"
+		           data-ad-slot="9074553645"
+		           data-ad-format="auto"></ins>
+		      <script>
+		      (adsbygoogle = window.adsbygoogle || []).push({});
+		      </script>   
+		</div>
+
+
+</div>
