--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -1,47 +1,24 @@
-<style type="text/css">
+<!-- <style type="text/css">
 	.rightdiv {
    position: absolute;
    left: 100%;
    top: 0;
 }
-</style>
-<div class="container-fluid">
-<div class="row">
+</style> -->
+<div class="container">
+
+<div class="row text-center">
+           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:140px'></ins>
+                
+                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    </div>
+
+
 <% i = 1 %>
-<div class="col-sm-2"></div>
-<div class="col-sm-8 text-center">
-	
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<!-- school9edu_main_Blog1_1x1_as -->
-		<ins class="adsbygoogle"
-		     style="display:block"
-		     data-ad-client="ca-pub-7665698555914778"
-		     data-ad-slot="9074553645"
-		     data-ad-format="auto"></ins>
-		<script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
-
-</div>
-<div class="col-sm-2"></div>
-</div>
-<br><br>
 
 <div class="row">
-<div class="col-sm-3">
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- school9edu_main_Blog1_1x1_as -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7665698555914778"
-     data-ad-slot="9074553645"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
-</div>
-<div class="col-sm-8">
 <% if @comptest.empty? %>
 	<div class="alert alert-danger">
       <strong>No Tests Added Yet</strong>
@@ -54,7 +31,7 @@
 				<th class="success">Date</th>
 				<th class="success"></th>
 			</tr>
-			<!-- <% j = 1 %> -->
+			
 			<% ad=@comptest.count/2 %>
 			<% ad2=@comptest.count/2 %>
 			<% count = @comptest.count %>
@@ -70,21 +47,14 @@
 			<% if i == ad %>
 				
 				<tr class="text-center">
-				<td colspan="3">
-					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<!-- Responsive Links -->
-					<ins class="adsbygoogle"
-					     style="display:block"
-					     data-ad-client="ca-pub-7665698555914778"
-					     data-ad-slot="8409268847"
-					     data-ad-format="link"></ins>
-					<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
+					<td colspan="3">
+	 				
+	 				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:70px'></ins>
+	                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
-                   </td> 
-                   
-                </tr>
+	                </td> 
+	             </tr>
                 <% end %>
 
 			<% i+=1 %>
@@ -92,21 +62,12 @@
 		</table>
 <% end %>
 
-			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<!-- school9edu_main_Blog1_1x1_as -->
-			<ins class="adsbygoogle"
-			     style="display:block"
-			     data-ad-client="ca-pub-7665698555914778"
-			     data-ad-slot="9074553645"
-			     data-ad-format="auto"></ins>
-			<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
-
-<div class="col-sm-1 rightdiv">
 
 </div>
-</div>
-</div>
-</div>
+		<div class="row text-center">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:100px'></ins>
+	                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+	    </div>
+
 </div>
