--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,6 @@
-  <div class="container">
-  <!-- <div class="row content"> -->
-        <% if notice %>
-              <div class="alert alert-success alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <%= notice %>
-              </div>
-              <% end %>
-              <% if alert %>
-              <div class="alert alert-warning alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <%= alert %>
-              </div>
-              <% end %>
+<div class="container">
 
-  
-    <div class="row text-center">
+  <div class="row text-center">
               <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- school9edu_main_Blog1_1x1_as -->
             <ins class="adsbygoogle"
@@ -26,60 +12,22 @@
             (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
     </div>
-<br>
-    <div class="row text-center"> 
 
-    <h1>WELCOME TO SBTET ONLINE PORTAL </h1>
-      <!-- <div class="col-md-2"> -->
-            <!-- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-            <!-- school9edu_main_Blog1_1x1_as -->
-            <!-- <ins class="adsbygoogle" -->
-               <!--   style="display:block"
-                 data-ad-client="ca-pub-7665698555914778"
-                 data-ad-slot="9074553645"
-                 data-ad-format="auto"></ins> -->
-            <!-- <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-      </div> -->
+    <div class="row"> 
 
-      <div class=" text-success">
+    <h1 class="text-center">WELCOME TO SBTET ONLINE PORTAL </h1>
 
-          <p> Andhra Pradesh Engineering Common Entrance Test APECET- 2017 will be conducted through computer based Test by JNTUA, Ananthapuramu on behalf of Andhra Pradesh State Council of Higher Education (APSCHE). APECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in A.P. </p>
 
-            <p>Telangana State Engineering Common Entrance Test TSECET- 2017 will be conducted through computer based Test by JNTUH, Hyderabad on behalf of Telangana State Council of Higher Education (TSCHE). TSECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in T.S. </p>
+        <marquee><h2 class="text-danger"><b>IMPORTANT NOTICE</b></h2></marquee>
+    
 
-<br><br>
-  <div class="text-center">
-     <a href="/ecetsubjects"><button class="btn btn-success text-center">Start Ecet Exam </button> </a>
-  </div>
-  </div>
-        <br><br>
-        <div class="text-info">
-            <p>SBTET WORLD is one of the most leading and famous website in Diploma Fast Updates in India. The website which was providing Various data regarding technical courses who are pursing in technical courses (Latest information of Technical Boards or Universities  like: Examination Notification, Results, Previous Question papers, Examination fee Structures, Time schedules, Cet Exams Jobs and may more.........) Since from past 2 years. Now SBTET WORLD is going to provide Online based Mock Practice Examinations that who are going to appear in ECET/Any B.Tech level Engineering entrance based examinations and also useful for Private/Public Sector Examinations(Competitive Tests).
-            
-            Thank you for your continued support and for the confidence that all of you have placed in us. We would like to thank you all assuring our best services.</p>
-          </div>
-            <br>
 
-           <blockquote><b class="text-danger"> Note: This is only referral/Modal practices for entrance/competitive examinations. Do not depend only on this, this is only for practice purpose…… Do hard work, Practice and get Success.</b>
-            
-             <div class="text-center text-success"><b> ********* SBTET WORLD WISHING YOU ALL THE BEST ********</b></div>
-        
-             </blockquote>
-     <!-- <div class="col-md-2"> -->
-       <!-- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-            <!-- school9edu_main_Blog1_1x1_as -->
-            <!-- <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-7665698555914778"
-                 data-ad-slot="9074553645"
-                 data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-     </div> -->
+ 
+<div class="text-success">
+<b>
+<p>Hi Every One,</p>
 
-     </div>
-  <!-- </div> -->
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The students who are eagerly waiting for <a href="http://www.sbtetworld.in">SBTET WORLD.IN </a> mock Practice based Test of AP & TS ECET 2017 (Engineering Stream Test for Diploma Holders). Sbtet World is going to conduct Andhra Pradesh and Telangana State Ecet Practice Tests are commencing from <span class="text-danger">14-04-2017</span>. So, here we are informing to all the students/Candidates get ready for Online based mock Test. Thanking you all from @ <a class="text-danger" href="http://www.sbtetworld.in"> http://www.sbtetworld.in</a></b>
+</div>
+
 </div>
