--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 
   <meta name="google-site-verification" content="Hkjj2HdvwtIjG9-vQXd3hQMfGgJ7STiY9OCTwIbg2uc" />
-  
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link href="/assets/bootstrap.min.css" rel="stylesheet" type="text/css" /> -->
@@ -28,6 +28,15 @@
             ga('send', 'pageview');
 
         </script>
+
+
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-7665698555914778",
+              enable_page_level_ads: true
+            });
+          </script>
 
   
 </head>
