--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -2,117 +2,90 @@
 <div class="container-fluid">
     <div class="row text-center">
            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- school9edu_main_Blog1_1x1_as -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-7665698555914778"
-                 data-ad-slot="9074553645"
-                 data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-</div>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:120px'/>
+                
+                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    </div>
 
 
 
 <div class="row">
 	
-<div class="col-sm-3 text-center">
+<div class="col-sm-1 text-center"></div>
+
+	<div class="col-md-10">
+
+    	<div class="panel panel-info">
+          <!-- <div class="panel-heading"><a href="/ecet/cse">Computer Science</a><br></div> -->
+          <div class="panel-body">
+          	<div clsaa="row">
+          		<div class="col-md-6">Computer Science Test Exams</div>
+          		<div class="col-md-6 text-center"><a href="/ecet/cse">Exam List</a></div>
+          </div>
+          </div>
+        </div>
+
+        <div class="panel panel-info">
+          <!-- <div class="panel-heading"><a href="/ecet/ece">Electronics & Communication</a><br></div> -->
+          <div class="panel-body">
+          	<div clsaa="row">
+          		<div class="col-md-6">Electronics & Communication Test Exams</div>
+          		<div class="col-md-6 text-center"><a href="/ecet/ece">Exam List</a></div>
+          </div>
+          </div>
+        </div>
+
+          <!-- START ADD HERE -->
+          <!-- fit -->
          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- school9edu_main_Blog1_1x1_as -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-7665698555914778"
-                 data-ad-slot="9074553645"
-                 data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-</div>
-
-	<div class="col-md-6">
-
-      
-<br>
-	<div class="panel panel-info">
-      <!-- <div class="panel-heading"><a href="/ecet/cse">Computer Science</a><br></div> -->
-      <div class="panel-body">
-      	<div clsaa="row">
-      		<div class="col-md-6">Computer Science Test Exams</div>
-      		<div class="col-md-6 text-center"><a href="/ecet/cse">Exam List</a></div>
-      </div>
-      </div>
-    </div>
-
-    <div class="panel panel-info">
-      <!-- <div class="panel-heading"><a href="/ecet/ece">Electronics & Communication</a><br></div> -->
-      <div class="panel-body">
-      	<div clsaa="row">
-      		<div class="col-md-6">Electronics & Communication Test Exams</div>
-      		<div class="col-md-6 text-center"><a href="/ecet/ece">Exam List</a></div>
-      </div>
-      </div>
-    </div>
-
-      <!-- START ADD HERE -->
-      <!-- fit -->
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- Responsive Links -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-7665698555914778"
-           data-ad-slot="8409268847"
-           data-ad-format="link"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-      <!-- END ADD HERE -->
+          <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:100px'></ins>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+          <!-- END ADD HERE -->
 
 
 
-    <div class="panel panel-info">
-      <!-- <div class="panel-heading"><a href="/ecet/eee">Electrical & Electronics</a><br></div> -->
-      <div class="panel-body">
-      	<div clsaa="row">
-      		<div class="col-md-6">Electrical & Electronics Test Exams</div>
-      		<div class="col-md-6 text-center"><a href="/ecet/eee">Exam List</a></div>
-      </div>
-      </div>
-    </div>
+        <div class="panel panel-info">
+          <!-- <div class="panel-heading"><a href="/ecet/eee">Electrical & Electronics</a><br></div> -->
+          <div class="panel-body">
+          	<div clsaa="row">
+          		<div class="col-md-6">Electrical & Electronics Test Exams</div>
+          		<div class="col-md-6 text-center"><a href="/ecet/eee">Exam List</a></div>
+          </div>
+          </div>
+        </div>
 
-    <div class="panel panel-info">
-      <!-- <div class="panel-heading"><a href="/ecet/mechanical">MECHANICAL</a><br></div> -->
-      <div class="panel-body">
-      	<div clsaa="row">
-      		<div class="col-md-6">MECHANICAL Test Exams</div>
-      		<div class="col-md-6 text-center"><a href="/ecet/mechanical">Exam List</a></div>
-      </div>
-      </div>
-    </div>
+        <div class="panel panel-info">
+          <!-- <div class="panel-heading"><a href="/ecet/mechanical">MECHANICAL</a><br></div> -->
+          <div class="panel-body">
+          	<div clsaa="row">
+          		<div class="col-md-6">MECHANICAL Test Exams</div>
+          		<div class="col-md-6 text-center"><a href="/ecet/mechanical">Exam List</a></div>
+          </div>
+          </div>
+        </div>
     
 
-     <div class="panel panel-info">
-      <!-- <div class="panel-heading"><a href="/ecet/civil">CIVIL</a><br></div> -->
-      <div class="panel-body">
-      <div clsaa="row">
-      		<div class="col-md-6">Civil Test Exams</div>
-      		<div class="col-md-6 text-center"><a href="/ecet/civil">Exam List</a></div>
-      </div>
-      </div>
-    </div>
+         <div class="panel panel-info">
+          <!-- <div class="panel-heading"><a href="/ecet/civil">CIVIL</a><br></div> -->
+          <div class="panel-body">
+          <div clsaa="row">
+          		<div class="col-md-6">Civil Test Exams</div>
+          		<div class="col-md-6 text-center"><a href="/ecet/civil">Exam List</a></div>
+          </div>
+          </div>
+        </div>
    </div>
 
-   <div class="col-sm-3" style="margin:0px!important; padding: 0px!important;">
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 300*600 -->
-      <ins class="adsbygoogle"
-           style="display:inline-block;width:300px;height:600px"
-           data-ad-client="ca-pub-4211720830189288"
-           data-ad-slot="8422563053"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+   <div class="col-sm-1">
+      
     </div>
+
+    <div class="row text-center">
+           <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='8806221646' style='display:inline-block;min-width:400px;max-width:300px;width:100%;height:600px'/>
+<!-- <script src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js'/> -->
+<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    </div>
+
 
 
 </div>
