--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -11,29 +11,18 @@
                         <%= alert %>
                   </div>
                   <% end %>
-<br>
-       <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
+       <div class="row text-center">
+        
                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-              <!-- school9edu_main_Blog1_1x1_as -->
-              <ins class="adsbygoogle"
-                   style="display:block"
-                   data-ad-client="ca-pub-7665698555914778"
-                   data-ad-slot="9074553645"
-                   data-ad-format="auto"></ins>
-              <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
-              </div>
-         <div class="col-sm-2"></div>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:140px;'></ins>
+               
+                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        
         </div>
 
-
-<br>
 <% @questions.each do |q| %>
   <div class="panel panel-default">
-    <div class="panel-body"><%= q.question%></div>
+    <div class="panel-body"><%= q.question.html_safe %></div>
   </div>
                 
     <div class="panel panel-default">
@@ -51,7 +40,8 @@
                  <%= f.hidden_field :pag, :value => @questions.current_page+1 %>
                  <% end %>
                 <%= f.hidden_field :tc, :value => q.tc %>
-               <%= f.input :answer, as: :radio_buttons, :required => true, :label => false, collection: [q.a, q.b,q.c,q.d], wrapper: :vertical_radio_and_checkboxes %>
+               
+               <%= f.input :answer, as: :radio_buttons, :required => true, :label => false, collection: [q.a.html_safe,  q.b.html_safe, q.c.html_safe ,q.d.html_safe], wrapper: :vertical_radio_and_checkboxes %>
                 <% disabled = Submitque.where(:userid => current_user, :question => q.id, :subject => @subject) %>
                    <% if disabled.empty? %>
                       <%= f.submit "submit", :class => "btn btn-primary"%>
@@ -87,15 +77,10 @@
 <div class="text-center flickr_pagination">
   <%= will_paginate @questions, :class => "flickr_pagination", :previous_label => "Previous", :next_label => 'Next', :page_links => true, renderer: BootstrapPagination::Rails %>
   </div>
-      <div class="text-center">
-              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-              <!-- 728*90 -->
-              <ins class="adsbygoogle"
-                   style="display:inline-block;width:728px;height:90px"
-                   data-ad-client="ca-pub-4211720830189288"
-                   data-ad-slot="9899296254"></ins>
-              <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
+      <div class="text-center"> 
+               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:140px;'></ins>
+               
+                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
       </div>
 </div>
