--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -81,9 +81,10 @@
     </div>
 
     <div class="row text-center">
-           <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='8806221646' style='display:inline-block;min-width:400px;max-width:300px;width:100%;height:600px'/>
-<!-- <script src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js'/> -->
-<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:120px'/>
+                
+                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
 
 
