--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,4 +30,17 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The students who are eagerly waiting for <a href="http://www.sbtetworld.in">SBTET WORLD.IN </a> mock Practice based Test of AP & TS ECET 2017 (Engineering Stream Test for Diploma Holders). Sbtet World is going to conduct Andhra Pradesh and Telangana State Ecet Practice Tests are commencing from <span class="text-danger">14-04-2017</span>. So, here we are informing to all the students/Candidates get ready for Online based mock Test. Thanking you all from @ <a class="text-danger" href="http://www.sbtetworld.in"> http://www.sbtetworld.in</a></b>
 </div>
 
+<div class="row text-center">
+              <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- school9edu_main_Blog1_1x1_as -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7665698555914778"
+                 data-ad-slot="9074553645"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+    </div>
+
 </div>
