--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link href="/assets/bootstrap.min.css" rel="stylesheet" type="text/css" /> -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+  <script src='https://www.google.com/recaptcha/api.js'></script>
    <%= javascript_include_tag 'application' %>
 
         <style>  
