--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
 
+<div class="row text-center">
+     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:140px'></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   
@@ -72,15 +77,18 @@
   </div>
 <% end %>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- Responsive Links -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-7665698555914778"
-           data-ad-slot="8409268847"
-           data-ad-format="link"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+<!-- school9edu_main_Blog1_1x1_as -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7665698555914778"
+     data-ad-slot="9074553645"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+   <%= recaptcha_tags %>   
 
 <%= render "devise/shared/links" %>
 </div>
