--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,14 +1,7 @@
-<% @cets.each do |f| %>
-<div class="container">
-<div class="row">
-<div class="sm-col-12">
-      <a href= "#"><%= f.name.upcase %></a>
+<div class="contaner">
 
- <%end %><br>
+Total Users = <%= @users %><br>
 
- <a href="/ecetform">ECET</a> <a href="/eamcetform">EAMCET</a>
-
-</div>
-</div>
+Total tests = <%= @comptests %>
 
 </div>
