--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -22,7 +22,26 @@
 
 <% @questions.each do |q| %>
   <div class="panel panel-default">
-    <div class="panel-body"><%= q.question.html_safe %></div>
+    <div class="panel-body"><p><%= q.question.html_safe %></p><br>
+    <% if q.qimage? %>
+    <div class="row">
+    <div class="col-sm-8">
+      <p class="text-center"><%= image_tag(q.qimage) %></p>
+      </div>
+      <div class="col-sm-4">
+       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- school9edu_main_Blog1_1x1_as -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="9074553645"
+           data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+
+    <% end %>
+    </div>
   </div>
                 
     <div class="panel panel-default">
