ads problem fixed

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,12 +11,13 @@
     padding-top:7px;
 }
 </style>
+<%= javascript_include_tag 'application' %>
 
 <div id="footer" style="text-align: center">
           <div class="pull-right">
-            BY <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank">
+           POWERED BY <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank">
             <strong><span style="color: green">Sm</span><span style="color:red"> Khalidh</span></strong></a>
-            <strong>Copyright</strong>
+            <!-- <strong>Copyright</strong> -->
 
             <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:25px"></i></a>&nbsp;&nbsp;
 
@@ -26,9 +27,9 @@
             <!-- &copy;<%= Time.now.year %> -->
           </div>
           <div style="text-align: center">
-          <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
+          <a href="https://www.linkedin.com/in/sbtetworld-fast-results-79305a141/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
 
             <a href="https://www.facebook.com/www.sbtetworld.in/" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
 
-            <a href="https://plus.google.com/u/0/107659702751121090928" target="_blank"><i class="fa fa-google-plus-square" style="font-size:30px"></i></a>
+            <!-- <a href="https://plus.google.com/u/0/107659702751121090928" target="_blank"><i class="fa fa-google-plus-square" style="font-size:30px"></i></a> -->
             </div>f
