--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <meta name="google-site-verification" content="Hkjj2HdvwtIjG9-vQXd3hQMfGgJ7STiY9OCTwIbg2uc" />
+  <!-- <meta name="google-site-verification" content="Hkjj2HdvwtIjG9-vQXd3hQMfGgJ7STiY9OCTwIbg2uc" /> -->
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -54,14 +54,6 @@
 <br><br><br>
 
 <%= render :partial => 'layouts/footer' %>
-          
-<!-- <footer class="text-center footer navbar-fixed-bottom">
-  <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
-
-  <a href="https://www.facebook.com/khalidh.khalid" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
-
-  <a href="https://plus.google.com/u/0/107659702751121090928" target="_blank"><i class="fa fa-google-plus-square" style="font-size:30px"></i></a>
-</footer> -->
 
 </body>
 </html>
