--- a/app/views/ecet/ecetform.html.erb
+++ b/app/views/ecet/ecetform.html.erb
@@ -74,7 +74,7 @@
                     <div class="row">
 
                      <div class="col-sm-2">
-                          <%= f.input :comman, :placeholder => "Images ?", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                          <%= f.input :comman, :required => true, :collection => ["no","yes"], :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
                       </div>
                     <div class="col-sm-2">
                    <%= f.input :optiona, as: :file, :label => false %>
