--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,8 @@
 
 
     <ul class="nav navbar-nav navbar-right">
-     <li>  <%= link_to('My Account', edit_user_registration_path, :class => "glyphicon") %></li>
+    <li><a href="/"><span class="fa fa-home"></span> Home</a></li>
+     <li> <a herf="/users/edit"><span class="fa fa-user-circle"></span>My Account</a></li>
      <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
      
     </ul>
