--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -7,6 +7,16 @@
 </style> -->
 <div class="container">
 
+<div class="row">
+      <div class="col-sm-12">
+        <h4 class="page-title"></h4>
+        <ol class="breadcrumb">
+          <li><b><a href="/">Home</a></b></li>
+          <li><b><a href="/ecetsubjects">Ecet Subjects</a></b></li>
+          <li class="active">Tests</li>
+        </ol>
+     </div>
+ </div>
 <div class="row text-center">
            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                   <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:140px'></ins>
@@ -18,6 +28,8 @@
 <% i = 1 %>
 
 <div class="row">
+<div class="col-sm-1 text-center"></div>
+	<div class="col-md-10">
 
 <% if @comptest.empty? %>
 	<div class="alert alert-danger">
@@ -62,6 +74,9 @@
 		</table>
 <% end %>
 
+</div>
+
+<div class="col-sm-1 text-center"></div>
 
 </div>
 		<div class="row text-center">
