--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -1,12 +1,34 @@
 
-<div class="container-fluid">
+<div class="container">
+<div class="row">
+      <div class="col-sm-12">
+        <h4 class="page-title"></h4>
+        <ol class="breadcrumb">
+          <li><b><a href="/">Home</a></b></li>
+          <!-- <li><b><a href="/ecet">Ecet</a></b></li> -->
+          <li class="active">Ecet Subjects</li>
+        </ol>
+     </div>
+ </div><br>
+ <% if notice %>
+        <div class="alert alert-success alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= notice %>
+        </div>
+        <% end %>
+        <% if alert %>
+        <div class="alert alert-danger alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= alert %>
+        </div>
+        <% end %>
     <div class="row text-center">
            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                   <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:120px'/>
                 
                 <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
-
+<br>
 
 
 <div class="row">
@@ -20,7 +42,7 @@
           <div class="panel-body">
           	<div clsaa="row">
           		<div class="col-md-6">Computer Science Test Exams</div>
-          		<div class="col-md-6 text-center"><a href="/ecet/cse">Exam List</a></div>
+          		<div class="col-md-6 text-center"><a href="/ecet/cse"><button class="btn btn-info" > Exam List </button></a></div>
           </div>
           </div>
         </div>
@@ -30,7 +52,7 @@
           <div class="panel-body">
           	<div clsaa="row">
           		<div class="col-md-6">Electronics & Communication Test Exams</div>
-          		<div class="col-md-6 text-center"><a href="/ecet/ece">Exam List</a></div>
+          		<div class="col-md-6 text-center"><a href="/ecet/ece"> <button class="btn btn-info" > Cooming Soon </button> </a></div>
           </div>
           </div>
         </div>
@@ -49,7 +71,7 @@
           <div class="panel-body">
           	<div clsaa="row">
           		<div class="col-md-6">Electrical & Electronics Test Exams</div>
-          		<div class="col-md-6 text-center"><a href="/ecet/eee">Exam List</a></div>
+          		<div class="col-md-6 text-center"><a href="/ecet/eee"><button class="btn btn-info" > Exam List </button></a></div>
           </div>
           </div>
         </div>
@@ -59,7 +81,7 @@
           <div class="panel-body">
           	<div clsaa="row">
           		<div class="col-md-6">MECHANICAL Test Exams</div>
-          		<div class="col-md-6 text-center"><a href="/ecet/mechanical">Exam List</a></div>
+          		<div class="col-md-6 text-center"><a href="/ecet/mechanical"><button class="btn btn-info" > Cooming Soon </button></a></div>
           </div>
           </div>
         </div>
@@ -70,7 +92,7 @@
           <div class="panel-body">
           <div clsaa="row">
           		<div class="col-md-6">Civil Test Exams</div>
-          		<div class="col-md-6 text-center"><a href="/ecet/civil">Exam List</a></div>
+          		<div class="col-md-6 text-center"><a href="/ecet/civil"><button class="btn btn-info" > Exam List </button></a></div>
           </div>
           </div>
         </div>
