--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -106,7 +106,7 @@
             <% end %>
               </div>
             <div class="col-sm-4 text-center"><br><br><br>
-                <a href="/ecetresults/<%= q.tc %>/<%= @subject %>" > <button class="btn btn-danger">Finshed Exam</button></a>
+                <a href="/ecetresults/<%= q.tc %>/<%= @subject %>" > <button class="btn btn-danger">Finsh Exam</button></a>
             </div>
              </div>
   <% end %>
