--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
 
     <ul class="nav navbar-nav navbar-right">
     <li><a href="/"><span class="fa fa-home"></span> Home</a></li>
-     <li> <a herf="/users/edit"><span class="fa fa-user-circle"></span>My Account</a></li>
+     <li><a href="/users/edit"><span class="fa fa-user" aria-hidden="true"></span> MyAccount</a></li>
      <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
      
     </ul>
