--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,7 +1,15 @@
 <div class="contaner">
 
+
 Total Users = <%= @users %><br>
 
-Total tests = <%= @comptests %>
+Total tests = <%= @comptests %><br>
+
+<a href="/questions/1/cse">CSE Question</a><br>
+<a href="/questions/1/eee">EEE Question</a><br>
+<a href="/questions/1/mechanical">Mechanical Question</a><br>
+<a href="/questions/1/civil">Civil Question</a><br>
+<a href="/questions/1/ece">ECE Question</a><br>
+<!-- <a href="/questions/1/cse">CSE Question</a><br> -->
 
 </div>
