--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,7 +45,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, required: true %>
+    <%= f.email_field :email, :placeholder => "sbtetworld@gmail.com", required: true %>
   </div>
 
   <div class="field">
