--- a/app/views/admin/questions.html.erb
+++ b/app/views/admin/questions.html.erb
@@ -20,13 +20,13 @@
 
 			<tr>
 
-				<td>q.subject</td>
+
 					<td ><%= q.question %><br>
 					<% if q.qimage? %>
 						<%= image_tag(q.qimage,:class => 'img-responsive') %>
 					<% end %>
 					</td>
-					
+					<td><%= q.subject %></td>
 					<td>
 					</td>
 
