--- a/app/views/admin/questions.html.erb
+++ b/app/views/admin/questions.html.erb
@@ -10,6 +10,8 @@
 			<th>Option C</th>
 			<th>Option D</th>
 			<th>True Answer</th>
+			<th>Comman</th>
+			<th>ID</th>
 
 
 		</tr>
@@ -79,6 +81,8 @@
 							<%= q.t %>
 						<% end %>
 					</td>
+					<td><%= q.comman %></td>
+					<td> <%=q.id %>
 				</tr>
 
 				<% i+=1 %>
