--- a/app/views/exam/ecetresults.html.erb
+++ b/app/views/exam/ecetresults.html.erb
@@ -35,6 +35,7 @@
 		</tr>
 			<% ad=@ecetresults.count/3 %>
 			<% ad2=@ecetresults.count/3 %>
+			<%= @ecetresults.count %>
 		
 		<% @ecetresults.each do |r| %>
 			
